<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchBar"
        app:showAsAction="always"
        android:title="@string/search_bar"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        >
    </item>
    <item
        android:id="@+id/categories"
        app:showAsAction="always"
        android:title="@string/categories"
        android:icon="@drawable/ic_categories"
        >
        <menu>
            <item
                android:id="@+id/allProducts"
                android:title="@string/all_products" />
            <item
                android:id="@+id/alcoholicBeverages"
                android:title="@string/alcoholic_beverages" />
        </menu>
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="always"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:actionLayout="@layout/alert_cart"
        >
    </item>
    <item
        android:id="@+id/logout"
        app:showAsAction="always"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        >
    </item>
</menu>